2009-04-14 herumi <herumi@nifty.com>

        * OSCompat.cpp : fix some bug and test\test.bat runs well

        * support 64-bit large file

2009-04-14  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp (getLastErrorMessage): Added.

2009-04-13 herumi <herumi@nifty.com>

        * OSCompat.cpp : implementation for Windows for UTF16

2009-04-13  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Not to touch SIGINT.

2009-04-13  kokosabu  <kokosabu@gmail.com>

        * VM.h : Changed std::map => gc_vector.

2009-04-12  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp (scheme::nativeTranscoder): Added native-transcoder for Windows.

2009-04-12  kokosabu  <kokosabu@gmail.com>

        * Added : manage active ports.

2009-04-12  higepon  <higepon@users.sourceforge.jp>

        * Replaced (srfi :64) from ikarus-srfi.

        * lib/srfi/%3a1/lists.sls : Updated from ikarus-srfi.

        * test/lists.scm : Added from ikarus-srfi.

2009-04-11  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp: Adjust open flags.

2009-04-10  higepon  <higepon@users.sourceforge.jp>

        * Added (srfi :99) and tests.

        * tools/psyntax-r6rs/rev10_to_10/psyntax-buildscript-mosh.ss (identifier->library-map): Added assertion-error.

        * VM.cpp (mayBeStackPointer): Fixed the bug of Stack trace.

        * lib/srfi/%3a19/srfi-19.scm (date->julian-day): Merged bug fix.

2009-04-09  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryOutputPort.h : Changed fd_ => File Class.

        * FileBinaryInputOutputPort.cpp : Changed fd_ => File Class.

        * FileBinaryInputPort.cpp : Changed fd_ => File Class.

        * LineBufferedFileBinaryInputOutputPort.h: Changed fd_ => File Class.

        * BufferedFileBinaryInputPort.cpp : Changed fd_ => File Class.

        * FileBinaryInputOutputPort.cpp: Changed OutputPort to use File Class.

        * OSCompat.cpp (lseekFd): Added.
