@@ -61,6 +61,10 @@ public:
     virtual Object position() const;
     virtual bool setPosition(int64_t position);
     File* getFile();
+    ucs4string getLastErrorMessage()
+    {
+        return file_->getLastErrorMessage();
+    }
 
 protected:
     enum {
