@@ -71,6 +71,10 @@ public:
     Object position() const;
     bool setPosition(int64_t position);
     File* getFile();
+    ucs4string getLastErrorMessage()
+    {
+        return UC("");
+    }
 
 
 private:
