@@ -1,3 +1,7 @@
+2009-04-14  higepon  <higepon@users.sourceforge.jp>
+
+        * Removed stringError, use getLastErrorMessage();
+
 2009-04-14 herumi <herumi@nifty.com>
 
         * OSCompat.cpp : fix some bug and test\test.bat runs well
